# dichotomy

./: Cargo.toml  LICENSE-APACHE  README.md
benches/: performance.rs
examples/: intended.rs  intended2.rs  simple.rs
src/: arc.rs  buffer.rs  helper.rs  lib.rs  marker.rs  tests.rs
src/tests/: consumer.rs  mod.rs  producer.rs
