[package]
name = "dichotomy"
authors = ["baer <gerald.schoiber@ins.jku.at"]
version = "0.1.0"
edition = "2021"


#[features]
#default = []

[profile.release]
debug = true
#strip = true

[profile.bench]
debug = true

[dev-dependencies]
criterion = "0.3.6"
rand = "0.8.5"


[[bench]]
name = "performance"
harness = false

[[example]]
name = "intended"

[[example]]
name = "intended2"
